<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwich Wizard</string>
    <string name="quiz">Quiz View</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_diagnoseButton">Sandwich Diagnosis</string>
    <string name="text_customizeButton">Customize Your Ingredients</string>
    <string name="text_favoritesButton">Favorites</string>
    <string name="text_randomButton">Random Sandwich</string>
    <string name="text_slogan">Find the sandwich you need.</string>
    <string name="title_activity_shaker">Shake It</string>
    <string name="shake_it">Shake me, Baby!</string>
    <string name="random_pic">random picture</string>
    <string name="home">Home</string>
    <string name="text_filterSetupButton">Filters</string>
    <string name="question_text">Question Text lorem ipsum dolor sit amet, consectetur adipiscing
        elit. Praesent non dolor id nibh gravida pretium in arcu. Vestibulum at justo congue,
        molestie dolor?</string>
    <string name="answer_1_text">Answer 1</string>
    <string name="answer_2_text">Answer 2</string>
    <string name="answer_3_text">Answer 3</string>
    <string name="answer_4_text">Answer 4</string>
    <string name="sandwich_description">Sandwich description lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Praesent non dolor id nibh gravida pretium in arcu. Vestibulum at justo congue,
        molestie dolor.</string>
    <string name="sandwich_name">Sandwich Name</string>
    <string name="sandwich_one">Sandwich</string>
    <string name="favorites">Favorites</string>
    <string name="customize">Customize</string>
    <string name="sandwich_picture">Sandwich Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customization">CustomizationActivity</string>
</resources>
